[build-system]
requires = ["requests", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gau-python"
version = "0.1.7"
authors = [
  { name="Connor Marchand", email="connor@connormarchand.com" },
]
description = "Source: https://github.com/connor-marchand/gau-python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/connor-marchand/gau-python"
"Bug Tracker" = "https://github.com/connor-marchand/gau-python/issues"